--- a/Wello.html
+++ b/Wello.html
@@ -2,7 +2,7 @@
 	<html lang="pt-br>
 		<head>
 			<meta> charset="UTF-8" </meta>
-			<title>Wello!</title>
+			<title>Wello!!!</title>
 		</head>
 
 		<body>
